src/Sintactico/y.output
   0  $accept : program $end

   1  program : '{' type_declarations '}'
   2          | error

   3  type_declarations : type_declaration
   4                    | type_declarations type_declaration

   5  type_declaration : class_declaration
   6                   | interface_declaration
   7                   | implement_for_declaration
   8                   | block_statement

   9  class_declaration : CLASS class_name class_body
  10                    | CLASS class_name interfaces class_body

  11  class_name : ID

  12  class_body : '{' class_body_declarations '}'
  13             | '(' class_body_declarations ')'

  14  class_body_declarations : class_body_declaration
  15                          | class_body_declarations class_body_declaration

  16  class_body_declaration : class_member_declaration

  17  class_member_declaration : field_declaration
  18                           | method_declaration

  19  field_declaration : type variable_declarators ','
  20                    | type variable_declarators

  21  variable_declarators : variable_declarator
  22                       | variable_declarators ';' variable_declarator

  23  variable_declarator : variable_declarator_id
  24                      | variable_declarator_id '=' variable_initializer
  25                      | variable_declarator_id error '=' variable_initializer
  26                      | variable_declarator_id EQUAL_OPERATOR variable_initializer
  27                      | variable_declarator_id NOT_EQUAL_OPERATOR variable_initializer
  28                      | variable_declarator_id LESS_THAN_OR_EQUAL_OPERATOR variable_initializer
  29                      | variable_declarator_id GREATER_THAN_OR_EQUAL_OPERATOR variable_initializer

  30  variable_declarator_id : ID

  31  variable_initializer : arithmetic_operation

  32  method_declaration : method_header method_body

  33  method_header : result_type method_declarator

  34  result_type : VOID

  35  method_declarator : method_name '(' formal_parameter ')'
  36                    | method_name '{' formal_parameter '}'
  37                    | method_name '(' formal_parameter error ')'
  38                    | method_name '(' ')'
  39                    | method_name '{' '}'

  40  method_name : ID

  41  method_body : block
  42              | ','

  43  formal_parameter : type variable_declarator_id

  44  real_parameter : arithmetic_operation

  45  interfaces : IMPLEMENT interface_type_list

  46  interface_type_list : type_name
  47                      | interface_type_list ';' type_name
  48                      | interface_type_list ',' type_name

  49  interface_declaration : INTERFACE ID interface_body

  50  interface_body : '{' interface_member_declaration '}'
  51                 | '(' interface_member_declaration ')'
  52                 | '{' '}'
  53                 | '(' ')'

  54  interface_member_declaration : interface_method_declaration
  55                               | interface_member_declaration interface_method_declaration

  56  interface_method_declaration : constant_declaration
  57                               | abstract_method_declaration

  58  constant_declaration : type variable_declarators

  59  abstract_method_declaration : result_type method_declarator ','
  60                              | result_type method_declarator
  61                              | result_type method_declarator ';'

  62  implement_for_declaration : IMPL FOR reference_type ':' implement_for_body
  63                            | IMPL FOR reference_type ':' error ','
  64                            | IMPL FOR error ':' implement_for_body ','
  65                            | IMPL FOR reference_type error ':' implement_for_body
  66                            | error ID ':' implement_for_body

  67  implement_for_body : '{' implement_for_body_declarations '}'
  68                     | '(' implement_for_body_declarations ')'

  69  implement_for_body_declarations : implement_for_body_declaration
  70                                  | implement_for_body_declarations implement_for_body_declaration

  71  implement_for_body_declaration : implement_for_method_declaration

  72  implement_for_method_declaration : method_header implement_for_method_body

  73  implement_for_method_body : block
  74                            | ','

  75  assignment : left_hand_side assignment_operator arithmetic_operation

  76  left_hand_side : reference_type
  77                 | field_acces

  78  field_acces : primary '.' ID

  79  primary : reference_type
  80          | field_acces

  81  equality_expression : relational_expression
  82                      | equality_expression EQUAL_OPERATOR relational_expression
  83                      | equality_expression NOT_EQUAL_OPERATOR relational_expression

  84  relational_expression : additive_expression
  85                        | relational_expression '<' additive_expression
  86                        | relational_expression '>' additive_expression
  87                        | relational_expression GREATER_THAN_OR_EQUAL_OPERATOR additive_expression
  88                        | relational_expression LESS_THAN_OR_EQUAL_OPERATOR additive_expression

  89  arithmetic_operation : additive_expression
  90                       | TOD '(' additive_expression ')'
  91                       | TOD '(' error ')'
  92                       | TOD '{' error '}'
  93                       | TOD '{' '}'
  94                       | TOD '(' ')'
  95                       | error

  96  additive_expression : multiplicative_expression
  97                      | additive_expression '+' multiplicative_expression
  98                      | additive_expression '-' multiplicative_expression

  99  multiplicative_expression : unary_expression
 100                            | multiplicative_expression '*' unary_expression
 101                            | multiplicative_expression '/' unary_expression
 102                            | multiplicative_expression '%' unary_expression

 103  unary_expression : factor
 104                   | '(' arithmetic_operation ')'
 105                   | '(' ')'
 106                   | ID

 107  factor : CTE_DOUBLE
 108         | CTE_UINT
 109         | CTE_LONG
 110         | '-' CTE_DOUBLE
 111         | '-' CTE_LONG
 112         | '-' CTE_UINT

 113  assignment_operator : '='
 114                      | MINUS_ASSIGN
 115                      | error '='
 116                      | EQUAL_OPERATOR
 117                      | NOT_EQUAL_OPERATOR
 118                      | LESS_THAN_OR_EQUAL_OPERATOR
 119                      | GREATER_THAN_OR_EQUAL_OPERATOR

 120  method_invocation : ID '(' real_parameter ')'
 121                    | ID '(' ')'
 122                    | ID '(' real_parameter error ')'
 123                    | field_acces '(' real_parameter ')'
 124                    | field_acces '(' ')'
 125                    | field_acces '(' real_parameter error ')'

 126  type : primitive_type
 127       | reference_type

 128  primitive_type : numeric_type

 129  reference_type : ID

 130  numeric_type : integral_type
 131               | floating_type

 132  integral_type : UINT
 133                | LONG

 134  floating_type : DOUBLE

 135  type_name : ID

 136  block : '{' block_statements RETURN ',' '}'
 137        | '{' block_statements '}'
 138        | '(' block_statements RETURN ',' ')'
 139        | '{' RETURN ',' '}'
 140        | '(' RETURN ',' ')'
 141        | '{' '}'
 142        | '(' ')'

 143  executable_block : '{' executable_block_statements '}'
 144                   | '{' '}'

 145  block_statements : block_statement
 146                   | block_statements block_statement

 147  executable_block_statements : executable_statement
 148                              | executable_block_statements executable_statement

 149  block_statement : local_variable_declaration_statement
 150                  | statement

 151  executable_statement : if_then_declaration
 152                       | if_then_else_declaration
 153                       | for_in_range_statement
 154                       | print_statement
 155                       | expression_statement
 156                       | empty_statement

 157  local_variable_declaration_statement : local_variable_declaration ','

 158  local_variable_declaration : type variable_declarators

 159  statement : statement_without_trailing_substatement
 160            | if_then_declaration
 161            | if_then_else_declaration
 162            | for_in_range_statement
 163            | method_declaration
 164            | print_statement

 165  statement_without_trailing_substatement : block
 166                                          | empty_statement
 167                                          | expression_statement

 168  expression_statement : statement_expression ','
 169                       | statement_expression ';'

 170  statement_expression : assignment
 171                       | method_invocation

 172  empty_statement : ','

 173  if_then_declaration : IF if_then_cond if_then_body END_IF ','
 174                      | IF if_then_cond if_then_body ','

 175  if_then_cond : '(' equality_expression ')'
 176               | '(' error ')'
 177               | '{' equality_expression '}'
 178               | '(' ')'

 179  if_then_body : executable_statement
 180               | executable_block
 181               | local_variable_declaration_statement
 182               | error END_IF
 183               | error ','

 184  if_else_body : executable_statement
 185               | executable_block
 186               | local_variable_declaration_statement
 187               | error END_IF
 188               | error ','

 189  if_then_else_declaration : IF if_then_cond if_then_else_body END_IF ','
 190                           | IF if_then_cond if_then_else_body ','

 191  if_then_else_body : if_then_body ELSE if_else_body

 192  for_in_range_statement : FOR for_variable IN RANGE '(' for_init ';' for_end ';' for_update ')' executable_block
 193                         | FOR for_variable IN RANGE '(' for_init ';' for_end ';' for_update ')' executable_statement
 194                         | FOR for_variable IN RANGE '(' for_init ',' for_end ',' for_update ')' executable_block
 195                         | FOR for_variable IN RANGE '(' for_init ',' for_end ',' for_update ')' executable_statement
 196                         | FOR for_variable IN RANGE '(' for_init ';' for_end ';' for_update ')' error ','
 197                         | FOR for_variable IN RANGE '(' error ')' executable_block
 198                         | FOR for_variable IN RANGE '(' error ')' executable_statement
 199                         | error for_variable error '(' for_init ';' for_end ';' for_update ')' executable_block
 200                         | error for_variable error '(' for_init ';' for_end ';' for_update ')' executable_statement
 201                         | error for_variable error '(' for_init ',' for_end ',' for_update ')' executable_block
 202                         | error for_variable error '(' for_init ',' for_end ',' for_update ')' executable_statement

 203  for_variable : reference_type

 204  for_init : factor

 205  for_update : factor

 206  for_end : factor

 207  print_statement : PRINT CADENA ','
 208                  | PRINT CADENA error
 209                  | PRINT error ','
 210                  | error CADENA ','
 211                  | PRINT '\000'

state 0
	$accept : . program $end  (0)

	error  shift 1
	'{'  shift 2
	.  error

	program  goto 3


state 1
	program : error .  (2)

	.  reduce 2


state 2
	program : '{' . type_declarations '}'  (1)

	error  shift 4
	CLASS  shift 5
	INTERFACE  shift 6
	IF  shift 7
	FOR  shift 8
	IMPL  shift 9
	PRINT  shift 10
	VOID  shift 11
	LONG  shift 12
	UINT  shift 13
	DOUBLE  shift 14
	ID  shift 15
	'{'  shift 16
	'('  shift 17
	','  shift 18
	.  error

	type_declarations  goto 19
	type_declaration  goto 20
	class_declaration  goto 21
	interface_declaration  goto 22
	implement_for_declaration  goto 23
	block_statement  goto 24
	method_declaration  goto 25
	type  goto 26
	method_header  goto 27
	result_type  goto 28
	block  goto 29
	reference_type  goto 30
	assignment  goto 31
	left_hand_side  goto 32
	field_acces  goto 33
	primary  goto 34
	method_invocation  goto 35
	primitive_type  goto 36
	numeric_type  goto 37
	integral_type  goto 38
	floating_type  goto 39
	local_variable_declaration_statement  goto 40
	statement  goto 41
	if_then_declaration  goto 42
	if_then_else_declaration  goto 43
	for_in_range_statement  goto 44
	print_statement  goto 45
	expression_statement  goto 46
	empty_statement  goto 47
	local_variable_declaration  goto 48
	statement_without_trailing_substatement  goto 49
	statement_expression  goto 50


state 3
	$accept : program . $end  (0)

	$end  accept


state 4
	implement_for_declaration : error . ID ':' implement_for_body  (66)
	for_in_range_statement : error . for_variable error '(' for_init ';' for_end ';' for_update ')' executable_block  (199)
	for_in_range_statement : error . for_variable error '(' for_init ';' for_end ';' for_update ')' executable_statement  (200)
	for_in_range_statement : error . for_variable error '(' for_init ',' for_end ',' for_update ')' executable_block  (201)
	for_in_range_statement : error . for_variable error '(' for_init ',' for_end ',' for_update ')' executable_statement  (202)
	print_statement : error . CADENA ','  (210)

	CADENA  shift 51
	ID  shift 52
	.  error

	reference_type  goto 53
	for_variable  goto 54


state 5
	class_declaration : CLASS . class_name class_body  (9)
	class_declaration : CLASS . class_name interfaces class_body  (10)

	ID  shift 55
	.  error

	class_name  goto 56


state 6
	interface_declaration : INTERFACE . ID interface_body  (49)

	ID  shift 57
	.  error


state 7
	if_then_declaration : IF . if_then_cond if_then_body END_IF ','  (173)
	if_then_declaration : IF . if_then_cond if_then_body ','  (174)
	if_then_else_declaration : IF . if_then_cond if_then_else_body END_IF ','  (189)
	if_then_else_declaration : IF . if_then_cond if_then_else_body ','  (190)

	'{'  shift 58
	'('  shift 59
	.  error

	if_then_cond  goto 60


state 8
	for_in_range_statement : FOR . for_variable IN RANGE '(' for_init ';' for_end ';' for_update ')' executable_block  (192)
	for_in_range_statement : FOR . for_variable IN RANGE '(' for_init ';' for_end ';' for_update ')' executable_statement  (193)
	for_in_range_statement : FOR . for_variable IN RANGE '(' for_init ',' for_end ',' for_update ')' executable_block  (194)
	for_in_range_statement : FOR . for_variable IN RANGE '(' for_init ',' for_end ',' for_update ')' executable_statement  (195)
	for_in_range_statement : FOR . for_variable IN RANGE '(' for_init ';' for_end ';' for_update ')' error ','  (196)
	for_in_range_statement : FOR . for_variable IN RANGE '(' error ')' executable_block  (197)
	for_in_range_statement : FOR . for_variable IN RANGE '(' error ')' executable_statement  (198)

	ID  shift 61
	.  error

	reference_type  goto 53
	for_variable  goto 62


state 9
	implement_for_declaration : IMPL . FOR reference_type ':' implement_for_body  (62)
	implement_for_declaration : IMPL . FOR reference_type ':' error ','  (63)
	implement_for_declaration : IMPL . FOR error ':' implement_for_body ','  (64)
	implement_for_declaration : IMPL . FOR reference_type error ':' implement_for_body  (65)

	FOR  shift 63
	.  error


state 10
	print_statement : PRINT . CADENA ','  (207)
	print_statement : PRINT . CADENA error  (208)
	print_statement : PRINT . error ','  (209)
	print_statement : PRINT . '\000'  (211)

	error  shift 64
	CADENA  shift 65
	'\000'  shift 66
	.  error


state 11
	result_type : VOID .  (34)

	.  reduce 34


state 12
	integral_type : LONG .  (133)

	.  reduce 133


state 13
	integral_type : UINT .  (132)

	.  reduce 132


state 14
	floating_type : DOUBLE .  (134)

	.  reduce 134


state 15
	method_invocation : ID . '(' real_parameter ')'  (120)
	method_invocation : ID . '(' ')'  (121)
	method_invocation : ID . '(' real_parameter error ')'  (122)
	reference_type : ID .  (129)

	'('  shift 67
	error  reduce 129
	EQUAL_OPERATOR  reduce 129
	NOT_EQUAL_OPERATOR  reduce 129
	GREATER_THAN_OR_EQUAL_OPERATOR  reduce 129
	LESS_THAN_OR_EQUAL_OPERATOR  reduce 129
	MINUS_ASSIGN  reduce 129
	ID  reduce 129
	'='  reduce 129
	'.'  reduce 129


state 16
	block : '{' . block_statements RETURN ',' '}'  (136)
	block : '{' . block_statements '}'  (137)
	block : '{' . RETURN ',' '}'  (139)
	block : '{' . '}'  (141)

	error  shift 68
	RETURN  shift 69
	IF  shift 7
	FOR  shift 8
	PRINT  shift 10
	VOID  shift 11
	LONG  shift 12
	UINT  shift 13
	DOUBLE  shift 14
	ID  shift 15
	'{'  shift 16
	'}'  shift 70
	'('  shift 17
	','  shift 18
	.  error

	block_statement  goto 71
	method_declaration  goto 25
	type  goto 26
	method_header  goto 27
	result_type  goto 28
	block  goto 29
	reference_type  goto 30
	assignment  goto 31
	left_hand_side  goto 32
	field_acces  goto 33
	primary  goto 34
	method_invocation  goto 35
	primitive_type  goto 36
	numeric_type  goto 37
	integral_type  goto 38
	floating_type  goto 39
	block_statements  goto 72
	local_variable_declaration_statement  goto 40
	statement  goto 41
	if_then_declaration  goto 42
	if_then_else_declaration  goto 43
	for_in_range_statement  goto 44
	print_statement  goto 45
	expression_statement  goto 46
	empty_statement  goto 47
	local_variable_declaration  goto 48
	statement_without_trailing_substatement  goto 49
	statement_expression  goto 50


state 17
	block : '(' . block_statements RETURN ',' ')'  (138)
	block : '(' . RETURN ',' ')'  (140)
	block : '(' . ')'  (142)

	error  shift 68
	RETURN  shift 73
	IF  shift 7
	FOR  shift 8
	PRINT  shift 10
	VOID  shift 11
	LONG  shift 12
	UINT  shift 13
	DOUBLE  shift 14
	ID  shift 15
	'{'  shift 16
	'('  shift 17
	')'  shift 74
	','  shift 18
	.  error

	block_statement  goto 71
	method_declaration  goto 25
	type  goto 26
	method_header  goto 27
	result_type  goto 28
	block  goto 29
	reference_type  goto 30
	assignment  goto 31
	left_hand_side  goto 32
	field_acces  goto 33
	primary  goto 34
	method_invocation  goto 35
	primitive_type  goto 36
	numeric_type  goto 37
	integral_type  goto 38
	floating_type  goto 39
	block_statements  goto 75
	local_variable_declaration_statement  goto 40
	statement  goto 41
	if_then_declaration  goto 42
	if_then_else_declaration  goto 43
	for_in_range_statement  goto 44
	print_statement  goto 45
	expression_statement  goto 46
	empty_statement  goto 47
	local_variable_declaration  goto 48
	statement_without_trailing_substatement  goto 49
	statement_expression  goto 50


state 18
	empty_statement : ',' .  (172)

	.  reduce 172


state 19
	program : '{' type_declarations . '}'  (1)
	type_declarations : type_declarations . type_declaration  (4)

	error  shift 4
	CLASS  shift 5
	INTERFACE  shift 6
	IF  shift 7
	FOR  shift 8
	IMPL  shift 9
	PRINT  shift 10
	VOID  shift 11
	LONG  shift 12
	UINT  shift 13
	DOUBLE  shift 14
	ID  shift 15
	'{'  shift 16
	'}'  shift 76
	'('  shift 17
	','  shift 18
	.  error

	type_declaration  goto 77
	class_declaration  goto 21
	interface_declaration  goto 22
	implement_for_declaration  goto 23
	block_statement  goto 24
	method_declaration  goto 25
	type  goto 26
	method_header  goto 27
	result_type  goto 28
	block  goto 29
	reference_type  goto 30
	assignment  goto 31
	left_hand_side  goto 32
	field_acces  goto 33
	primary  goto 34
	method_invocation  goto 35
	primitive_type  goto 36
	numeric_type  goto 37
	integral_type  goto 38
	floating_type  goto 39
	local_variable_declaration_statement  goto 40
	statement  goto 41
	if_then_declaration  goto 42
	if_then_else_declaration  goto 43
	for_in_range_statement  goto 44
	print_statement  goto 45
	expression_statement  goto 46
	empty_statement  goto 47
	local_variable_declaration  goto 48
	statement_without_trailing_substatement  goto 49
	statement_expression  goto 50


state 20
	type_declarations : type_declaration .  (3)

	.  reduce 3


state 21
	type_declaration : class_declaration .  (5)

	.  reduce 5


state 22
	type_declaration : interface_declaration .  (6)

	.  reduce 6


state 23
	type_declaration : implement_for_declaration .  (7)

	.  reduce 7


state 24
	type_declaration : block_statement .  (8)

	.  reduce 8


state 25
	statement : method_declaration .  (163)

	.  reduce 163


state 26
	local_variable_declaration : type . variable_declarators  (158)

	ID  shift 78
	.  error

	variable_declarators  goto 79
	variable_declarator  goto 80
	variable_declarator_id  goto 81


state 27
	method_declaration : method_header . method_body  (32)

	'{'  shift 16
	'('  shift 17
	','  shift 82
	.  error

	method_body  goto 83
	block  goto 84


state 28
	method_header : result_type . method_declarator  (33)

	ID  shift 85
	.  error

	method_declarator  goto 86
	method_name  goto 87


state 29
	statement_without_trailing_substatement : block .  (165)

	.  reduce 165


state 30
	left_hand_side : reference_type .  (76)
	primary : reference_type .  (79)
	type : reference_type .  (127)

	error  reduce 76
	EQUAL_OPERATOR  reduce 76
	NOT_EQUAL_OPERATOR  reduce 76
	GREATER_THAN_OR_EQUAL_OPERATOR  reduce 76
	LESS_THAN_OR_EQUAL_OPERATOR  reduce 76
	MINUS_ASSIGN  reduce 76
	ID  reduce 127
	'='  reduce 76
	'.'  reduce 79


state 31
	statement_expression : assignment .  (170)

	.  reduce 170


state 32
	assignment : left_hand_side . assignment_operator arithmetic_operation  (75)

	error  shift 88
	EQUAL_OPERATOR  shift 89
	NOT_EQUAL_OPERATOR  shift 90
	GREATER_THAN_OR_EQUAL_OPERATOR  shift 91
	LESS_THAN_OR_EQUAL_OPERATOR  shift 92
	MINUS_ASSIGN  shift 93
	'='  shift 94
	.  error

	assignment_operator  goto 95


state 33
	left_hand_side : field_acces .  (77)
	primary : field_acces .  (80)
	method_invocation : field_acces . '(' real_parameter ')'  (123)
	method_invocation : field_acces . '(' ')'  (124)
	method_invocation : field_acces . '(' real_parameter error ')'  (125)

	'('  shift 96
	error  reduce 77
	EQUAL_OPERATOR  reduce 77
	NOT_EQUAL_OPERATOR  reduce 77
	GREATER_THAN_OR_EQUAL_OPERATOR  reduce 77
	LESS_THAN_OR_EQUAL_OPERATOR  reduce 77
	MINUS_ASSIGN  reduce 77
	'='  reduce 77
	'.'  reduce 80


state 34
	field_acces : primary . '.' ID  (78)

	'.'  shift 97
	.  error


state 35
	statement_expression : method_invocation .  (171)

	.  reduce 171


state 36
	type : primitive_type .  (126)

	.  reduce 126


state 37
	primitive_type : numeric_type .  (128)

	.  reduce 128


state 38
	numeric_type : integral_type .  (130)

	.  reduce 130


state 39
	numeric_type : floating_type .  (131)

	.  reduce 131


state 40
	block_statement : local_variable_declaration_statement .  (149)

	.  reduce 149


state 41
	block_statement : statement .  (150)

	.  reduce 150


state 42
	statement : if_then_declaration .  (160)

	.  reduce 160


state 43
	statement : if_then_else_declaration .  (161)

	.  reduce 161


state 44
	statement : for_in_range_statement .  (162)

	.  reduce 162


state 45
	statement : print_statement .  (164)

	.  reduce 164


state 46
	statement_without_trailing_substatement : expression_statement .  (167)

	.  reduce 167


state 47
	statement_without_trailing_substatement : empty_statement .  (166)

	.  reduce 166


state 48
	local_variable_declaration_statement : local_variable_declaration . ','  (157)

	','  shift 98
	.  error


state 49
	statement : statement_without_trailing_substatement .  (159)

	.  reduce 159


state 50
	expression_statement : statement_expression . ','  (168)
	expression_statement : statement_expression . ';'  (169)

	','  shift 99
	';'  shift 100
	.  error


state 51
	print_statement : error CADENA . ','  (210)

	','  shift 101
	.  error


state 52
	implement_for_declaration : error ID . ':' implement_for_body  (66)
	reference_type : ID .  (129)

	':'  shift 102
	error  reduce 129


state 53
	for_variable : reference_type .  (203)

	.  reduce 203


state 54
	for_in_range_statement : error for_variable . error '(' for_init ';' for_end ';' for_update ')' executable_block  (199)
	for_in_range_statement : error for_variable . error '(' for_init ';' for_end ';' for_update ')' executable_statement  (200)
	for_in_range_statement : error for_variable . error '(' for_init ',' for_end ',' for_update ')' executable_block  (201)
	for_in_range_statement : error for_variable . error '(' for_init ',' for_end ',' for_update ')' executable_statement  (202)

	error  shift 103
	.  error


state 55
	class_name : ID .  (11)

	.  reduce 11


state 56
	class_declaration : CLASS class_name . class_body  (9)
	class_declaration : CLASS class_name . interfaces class_body  (10)

	IMPLEMENT  shift 104
	'{'  shift 105
	'('  shift 106
	.  error

	class_body  goto 107
	interfaces  goto 108


state 57
	interface_declaration : INTERFACE ID . interface_body  (49)

	'{'  shift 109
	'('  shift 110
	.  error

	interface_body  goto 111


state 58
	if_then_cond : '{' . equality_expression '}'  (177)

	ID  shift 112
	CTE_DOUBLE  shift 113
	CTE_UINT  shift 114
	CTE_LONG  shift 115
	'-'  shift 116
	'('  shift 117
	.  error

	equality_expression  goto 118
	relational_expression  goto 119
	additive_expression  goto 120
	multiplicative_expression  goto 121
	unary_expression  goto 122
	factor  goto 123


state 59
	if_then_cond : '(' . equality_expression ')'  (175)
	if_then_cond : '(' . error ')'  (176)
	if_then_cond : '(' . ')'  (178)

	error  shift 124
	ID  shift 112
	CTE_DOUBLE  shift 113
	CTE_UINT  shift 114
	CTE_LONG  shift 115
	'-'  shift 116
	'('  shift 117
	')'  shift 125
	.  error

	equality_expression  goto 126
	relational_expression  goto 119
	additive_expression  goto 120
	multiplicative_expression  goto 121
	unary_expression  goto 122
	factor  goto 123


state 60
	if_then_declaration : IF if_then_cond . if_then_body END_IF ','  (173)
	if_then_declaration : IF if_then_cond . if_then_body ','  (174)
	if_then_else_declaration : IF if_then_cond . if_then_else_body END_IF ','  (189)
	if_then_else_declaration : IF if_then_cond . if_then_else_body ','  (190)

	error  shift 127
	IF  shift 7
	FOR  shift 8
	PRINT  shift 10
	LONG  shift 12
	UINT  shift 13
	DOUBLE  shift 14
	ID  shift 15
	'{'  shift 128
	','  shift 18
	.  error

	type  goto 26
	reference_type  goto 30
	assignment  goto 31
	left_hand_side  goto 32
	field_acces  goto 33
	primary  goto 34
	method_invocation  goto 35
	primitive_type  goto 36
	numeric_type  goto 37
	integral_type  goto 38
	floating_type  goto 39
	executable_block  goto 129
	executable_statement  goto 130
	local_variable_declaration_statement  goto 131
	if_then_declaration  goto 132
	if_then_else_declaration  goto 133
	for_in_range_statement  goto 134
	print_statement  goto 135
	expression_statement  goto 136
	empty_statement  goto 137
	local_variable_declaration  goto 48
	statement_expression  goto 50
	if_then_body  goto 138
	if_then_else_body  goto 139


state 61
	reference_type : ID .  (129)

	.  reduce 129


state 62
	for_in_range_statement : FOR for_variable . IN RANGE '(' for_init ';' for_end ';' for_update ')' executable_block  (192)
	for_in_range_statement : FOR for_variable . IN RANGE '(' for_init ';' for_end ';' for_update ')' executable_statement  (193)
	for_in_range_statement : FOR for_variable . IN RANGE '(' for_init ',' for_end ',' for_update ')' executable_block  (194)
	for_in_range_statement : FOR for_variable . IN RANGE '(' for_init ',' for_end ',' for_update ')' executable_statement  (195)
	for_in_range_statement : FOR for_variable . IN RANGE '(' for_init ';' for_end ';' for_update ')' error ','  (196)
	for_in_range_statement : FOR for_variable . IN RANGE '(' error ')' executable_block  (197)
	for_in_range_statement : FOR for_variable . IN RANGE '(' error ')' executable_statement  (198)

	IN  shift 140
	.  error


state 63
	implement_for_declaration : IMPL FOR . reference_type ':' implement_for_body  (62)
	implement_for_declaration : IMPL FOR . reference_type ':' error ','  (63)
	implement_for_declaration : IMPL FOR . error ':' implement_for_body ','  (64)
	implement_for_declaration : IMPL FOR . reference_type error ':' implement_for_body  (65)

	error  shift 141
	ID  shift 61
	.  error

	reference_type  goto 142


state 64
	print_statement : PRINT error . ','  (209)

	','  shift 143
	.  error


state 65
	print_statement : PRINT CADENA . ','  (207)
	print_statement : PRINT CADENA . error  (208)

	error  shift 144
	','  shift 145
	.  error


state 66
	print_statement : PRINT '\000' .  (211)

	.  reduce 211


state 67
	method_invocation : ID '(' . real_parameter ')'  (120)
	method_invocation : ID '(' . ')'  (121)
	method_invocation : ID '(' . real_parameter error ')'  (122)

	error  shift 146
	TOD  shift 147
	ID  shift 112
	CTE_DOUBLE  shift 113
	CTE_UINT  shift 114
	CTE_LONG  shift 115
	'-'  shift 116
	'('  shift 117
	')'  shift 148
	.  error

	arithmetic_operation  goto 149
	real_parameter  goto 150
	additive_expression  goto 151
	multiplicative_expression  goto 121
	unary_expression  goto 122
	factor  goto 123


state 68
	for_in_range_statement : error . for_variable error '(' for_init ';' for_end ';' for_update ')' executable_block  (199)
	for_in_range_statement : error . for_variable error '(' for_init ';' for_end ';' for_update ')' executable_statement  (200)
	for_in_range_statement : error . for_variable error '(' for_init ',' for_end ',' for_update ')' executable_block  (201)
	for_in_range_statement : error . for_variable error '(' for_init ',' for_end ',' for_update ')' executable_statement  (202)
	print_statement : error . CADENA ','  (210)

	CADENA  shift 51
	ID  shift 61
	.  error

	reference_type  goto 53
	for_variable  goto 54


state 69
	block : '{' RETURN . ',' '}'  (139)

	','  shift 152
	.  error


state 70
	block : '{' '}' .  (141)

	.  reduce 141


state 71
	block_statements : block_statement .  (145)

	.  reduce 145


state 72
	block : '{' block_statements . RETURN ',' '}'  (136)
	block : '{' block_statements . '}'  (137)
	block_statements : block_statements . block_statement  (146)

	error  shift 68
	RETURN  shift 153
	IF  shift 7
	FOR  shift 8
	PRINT  shift 10
	VOID  shift 11
	LONG  shift 12
	UINT  shift 13
	DOUBLE  shift 14
	ID  shift 15
	'{'  shift 16
	'}'  shift 154
	'('  shift 17
	','  shift 18
	.  error

	block_statement  goto 155
	method_declaration  goto 25
	type  goto 26
	method_header  goto 27
	result_type  goto 28
	block  goto 29
	reference_type  goto 30
	assignment  goto 31
	left_hand_side  goto 32
	field_acces  goto 33
	primary  goto 34
	method_invocation  goto 35
	primitive_type  goto 36
	numeric_type  goto 37
	integral_type  goto 38
	floating_type  goto 39
	local_variable_declaration_statement  goto 40
	statement  goto 41
	if_then_declaration  goto 42
	if_then_else_declaration  goto 43
	for_in_range_statement  goto 44
	print_statement  goto 45
	expression_statement  goto 46
	empty_statement  goto 47
	local_variable_declaration  goto 48
	statement_without_trailing_substatement  goto 49
	statement_expression  goto 50


state 73
	block : '(' RETURN . ',' ')'  (140)

	','  shift 156
	.  error


state 74
	block : '(' ')' .  (142)

	.  reduce 142


state 75
	block : '(' block_statements . RETURN ',' ')'  (138)
	block_statements : block_statements . block_statement  (146)

	error  shift 68
	RETURN  shift 157
	IF  shift 7
	FOR  shift 8
	PRINT  shift 10
	VOID  shift 11
	LONG  shift 12
	UINT  shift 13
	DOUBLE  shift 14
	ID  shift 15
	'{'  shift 16
	'('  shift 17
	','  shift 18
	.  error

	block_statement  goto 155
	method_declaration  goto 25
	type  goto 26
	method_header  goto 27
	result_type  goto 28
	block  goto 29
	reference_type  goto 30
	assignment  goto 31
	left_hand_side  goto 32
	field_acces  goto 33
	primary  goto 34
	method_invocation  goto 35
	primitive_type  goto 36
	numeric_type  goto 37
	integral_type  goto 38
	floating_type  goto 39
	local_variable_declaration_statement  goto 40
	statement  goto 41
	if_then_declaration  goto 42
	if_then_else_declaration  goto 43
	for_in_range_statement  goto 44
	print_statement  goto 45
	expression_statement  goto 46
	empty_statement  goto 47
	local_variable_declaration  goto 48
	statement_without_trailing_substatement  goto 49
	statement_expression  goto 50


state 76
	program : '{' type_declarations '}' .  (1)

	.  reduce 1


state 77
	type_declarations : type_declarations type_declaration .  (4)

	.  reduce 4


state 78
	variable_declarator_id : ID .  (30)

	.  reduce 30


state 79
	variable_declarators : variable_declarators . ';' variable_declarator  (22)
	local_variable_declaration : type variable_declarators .  (158)

	';'  shift 158
	','  reduce 158


state 80
	variable_declarators : variable_declarator .  (21)

	.  reduce 21


state 81
	variable_declarator : variable_declarator_id .  (23)
	variable_declarator : variable_declarator_id . '=' variable_initializer  (24)
	variable_declarator : variable_declarator_id . error '=' variable_initializer  (25)
	variable_declarator : variable_declarator_id . EQUAL_OPERATOR variable_initializer  (26)
	variable_declarator : variable_declarator_id . NOT_EQUAL_OPERATOR variable_initializer  (27)
	variable_declarator : variable_declarator_id . LESS_THAN_OR_EQUAL_OPERATOR variable_initializer  (28)
	variable_declarator : variable_declarator_id . GREATER_THAN_OR_EQUAL_OPERATOR variable_initializer  (29)
